docs: 更新README和词汇测验文件以改进说明和添加新题目
更新README.md文件，改进搜索建议的表述，使其更加清晰。同时，在词汇测验文件中添加了多个新的测验题目，以丰富题库内容。

--- a/vocabulary_quiz/单选题.md
+++ b/vocabulary_quiz/单选题.md
@@ -370,3 +370,143 @@ B. happen
 C. accommodate
 D. exhibit
 我的答案:A
+
+By ______ the explosions' infrared light, which penetrates dust better than visible light does, researchers have estimated how often these outbursts occur in the ilky Way.
+A. focusing
+B. caring
+C. detecting
+D. noticing
+我的答案:C
+
+It ______ to its intended phones easily, and it can recharge through certain compatible cases.
+A. attaches
+B. connects
+C. sticks
+D. selects
+正确答案：未知，排除B
+
+This paper presents the findings from recent archaeological investigations at the ancient ______ of Pompeii.
+A. site
+B. step
+C. relics
+D. access
+我的答案:A
+
+The gender pay gap is still enormous, and CEOs are still overwhelmingly male, as are ______ boards.
+A. school
+B. corporate
+C. business
+D. cooperate
+我的答案:B
+
+The theoretical ______ within which the research is conducted must be well-defned to maintain focus and analytical rigor.
+A.framework
+B.thesis
+c.file
+D.document
+我的答案:A
+
+The majority of ______ data is for particles with dimensions above 10 or 50 μm.
+A. possible
+B. available
+C. considerate
+D. practical
+我的答案:B
+
+Student ______ in extracurricular activities has been shown to improve academic performance and social skills
+A. transmission
+B. accommondation
+C. intervention
+D. participation
+我的答案:D
+
+The objectives of financial support are to return the public sector budget to surplus in the short term and maintain ______ economic growth in the long term.
+A. confined
+B. finite
+C. sustainable
+D. random
+我的答案:C
+
+This study investigates the factors contributing to \_\_\_\_\_\_ access to health care services in rural areas.
+A. restricted
+B. received
+C. regarded
+D. required
+我的答案:A
+
+It was outdoor education, focused mainly on children and young adults, but also including ______ adults, that closely embodied basic tenets of progressive adult environmental education.
+A. mature
+B. sophisticated
+C. social
+D. cultivated
+我的答案:A
+
+The study encompasses a wide ______ of topics, from environmental science to human psychology, providing a comprehensive overview.
+A.site
+B.range
+C.network
+D.content
+我的答案:B
+
+The purpose of this review was to identify the views of people with lD regarding their participation in RSE programmes and how they ______ their effectiveness
+A.perceive
+B.define
+C.sense
+D.regard
+我的答案:A
+
+The successful ______ of new languages can be greatly enhanced byimmersion and consistent practice in authentic settings
+A. acquisition
+B. communication
+C. coordination
+D. accumulation
+我的答案:A
+
+The paper has argued four propositions concerning competition ______.
+A.program
+B.politics
+c.policy
+D.process
+正确答案未知，排除D
+
+In most cases, such discussions were ______ to those classrooms where children were socially transitioning and their classmates needed language to make sense
+A. configurated
+B. confirmed
+C. confided
+D. confined
+我的答案:D
+
+Although delayed, a comprehensive ______ is still planned to open at a public park in Beijing.
+A. exhibit
+B. presentation
+c. composition
+D. demonstration
+我的答案:A
+
+The ______ results of the study will be published in the forthcoming journal edition, providing valuable insights into the research topic.
+A. initial
+B. final
+C. crutial
+D. global
+我的答案:B
+
+Researchers published their findings in a peer-reviewed ______ to ensure the credibility and dissemination of their work.
+A. final
+B. rational
+C. journal
+D. liberal
+我的答案:C
+
+It is become evident that children are ______ of transmitting the virus to some extent.
+A. skillful
+B. dynamic
+C. alternative
+D. capable
+我的答案:D
+
+As labor market conditions deteriorate, urban worker ______ into self-employment because they lack better alternatives
+A.ferry
+B.keep
+C.transit
+D.denote
+我的答案:C
