docs: 将“我的答案”统一修改为“正确答案”以标准化格式，修正了部分拼写，添加了新的vocabulary quiz题目

--- a/vocabulary_quiz/单选题.md
+++ b/vocabulary_quiz/单选题.md
@@ -24,7 +24,7 @@ A. modification
 B. displacement
 C. change
 D. movement
-我的答案:B
+正确答案:B
 
 
 However, young men and women have followed different \_\_\_\_\_\_ paths and, therefore, are applying their bilingual skills differently.
@@ -33,7 +33,7 @@ A. occupational
 B. internal
 C. principal
 D. subsequent
-我的答案:A
+正确答案:A
 
 
 In fact, the \_\_\_\_\_\_ of an output mechanism was not explicitly formalized in traditional optimization.
@@ -42,7 +42,7 @@ A. overview
 B. channel
 C. notion
 D. layout
-我的答案:C
+正确答案:C
 
 
 The \_\_\_\_\_\_ study results serve as a valuable reference point for researchers continuing work in the same field.
@@ -50,7 +50,7 @@ A. subsequent
 B. previous
 C. inspiring
 D. reversive
-我的答案:B
+正确答案:B
 
 
 Quantum physics is a highly \_\_\_\_\_\_ field that requires a thorough understanding of mathematical principles and theoretical concepts.
@@ -58,7 +58,7 @@ A. conclusive
 B. original
 C. preliminary
 D. complex
-我的答案:D
+正确答案:D
 
 
 Although delayed, a comprehensive \_\_\_\_\_\_ is still planned to open at a public park in Beijing.
@@ -66,7 +66,7 @@ A. composition
 B. explanation
 C. exhibit
 D. demonstration
-我的答案:C
+正确答案:C
 
 
 Estimation of how simultaneous exposure to multiple air pollutants affects the risk of adverse health response represents a \_\_\_\_\_\_ for scientific research.
@@ -74,7 +74,7 @@ A. menace
 B. guarantee
 C. challenge
 D. settlement
-我的答案:C
+正确答案:C
 
 
 Two shortcomings of these measures could \_\_\_\_\_\_ the correlations between shared reading and children's language skills.
@@ -82,7 +82,7 @@ A. minimize
 B. recede
 C. diminish
 D. subtract
-我的答案:C
+正确答案:C
 
 
 The Mastercard initiative comes at a time of growing interest in digital \_\_\_\_\_\_ among central banks.
@@ -90,7 +90,7 @@ A. money
 B. currency
 C. bills
 D. capital
-我的答案:B
+正确答案:B
 
 
 The aim is to \_\_\_\_\_\_ a depth of information about the criteria deemed relevant by assessors who are highly experienced in using the rubric.
@@ -98,7 +98,7 @@ A. perceive
 B. reject
 C. obtain
 D. access
-我的答案:C
+正确答案:C
 
 
 The introductory \_\_\_\_\_\_ of the textbook provides an overview of the fundamental principles of ecosystem dynamics.
@@ -106,7 +106,7 @@ A. text
 B. focus
 C. chapter
 D. concept
-我的答案:C
+正确答案:C
 
 
 Only modest improvements were \_\_\_\_\_\_ regarding waste water disposal.
@@ -114,7 +114,7 @@ A. acquired
 B. absorbed
 C. assumed
 D. achieved
-我的答案:D
+正确答案:D
 
 
 The team's meeting \_\_\_\_\_\_ was chosen for its convenience to all members, ensuring full attendance and participation.
@@ -122,7 +122,7 @@ A. foundation
 B. location
 C. accomodation
 D. region
-我的答案:B
+正确答案:B
 
 
 The \_\_\_\_\_\_ allowable number of participants for the study was set at 100 to maintain manageable data collection and analysis processes.
@@ -130,21 +130,21 @@ A. minimum
 B. maximum
 C. fundamental
 D. marginal
-我的答案:B
+正确答案:B
 
 Measurement theory has had a strong influence on writing assessments, while writing theory has had \_\_\_\_\_\_ influence.
 A. minimal
 B. tensive
 C. nominal
 D. essential
-我的答案:A
+正确答案:A
 
 Consistent with these \_\_\_\_\_\_ works, we found that the Ap produced by human neuron cells has the capacity to stimulate the expression of COX-2 in glial cells
 A. prior
 B. explicit
 C. subsequent
 D. extensive
-我的答案:A
+正确答案:A
 
 
 The graph below shows slightly longer term household \_\_\_\_\_\_ trends.
@@ -152,361 +152,446 @@ A. profit
 B. bonus
 C. income
 D. avenue
-我的答案:C
+正确答案:C
 
 The \_\_\_\_\_\_ results of the study will be published in the forthcoming journal edition, providing valuable insights into the research topic.
 A. final
 B. global
 C. initial
 D. crucial
-我的答案:A
+正确答案:A
 
 In most situations, the standard for risk is informed \_\_\_\_\_\_ : awareness of the potential for harm, and a chance to accept or refuse it.
 A. consent
 B. notice
 C. acknowledgement
 D. document
-我的答案:A
+正确答案:A
 
 The pesticide handmaidens that \_\_\_\_\_\_ NPK fertilizers can also interfere with nutrient delivery and scramble chemical signaling between mycorrhizal fungi and their plant host.
 A. accompany
 B. assist
 C. conduct
 D. attend
-我的答案:A
+正确答案:A
 
 This study examines the critical role of \_\_\_\_\_\_ in ensuring the longevity and functionality of public infrastructure,
 A. facilitation
 B. equipment
 C. consistence
 D. maintenance
-我的答案:D
+正确答案:D
 
 The idea that a(n) \_\_\_\_\_\_ of Higher Education might increase overall wage inequality is discussed in Budria and Moro-Egido (2008).
 A. priority
 B. expansion
 C. reduction
 D. differentiation
-我的答案:B
+正确答案:B
 
 German companies have been looking for \_\_\_\_\_\_ energy sources and ways to save gas, and they had been able to reduce energy consumption by around 8 percent.
 A. effective
 B. alternating
 C. alternative
 D. innovative
-我的答案:C
+正确答案:C
 
 L2 proficiency was thus the second between-participants variable at three levels (advanced, \_\_\_\_\_\_, and low).
 A. central
 B. common
 C. intermediate
 D. average
-我的答案:C
+正确答案:C
 
 Findings from this study highlighted the diversity within the Latina community as demonstrated by responses to \_\_\_\_\_\_,change and expectations of themselves and others.
 A. controversy
 B. quarrels
 C. discussion
 D. conversations
-我的答案:A
+正确答案:A
 
 Procedural bleeding occurs in the hospital setting where \_\_\_\_\_\_ care is available, whereas nonprocedural bleeding may occur when care is not rapidly accessible.
 A. medicine
 B. residential
 C. medical
 D. healthy
-我的答案:C
+正确答案:C
 
 This interview is part of our latest Women and Leadership special report, which highlights women making significant \_\_\_\_\_\_ to the major stories unfolding in the world today.
 A. advances
 B. contribution
 C. attribution
 D. benefits
-我的答案:B
+正确答案:B
 
 The increased storminess in the Arctic, coupled with reduced sea ice, is accelerating coastal \_\_\_\_\_\_.
 A. damage
 B. erosion
 C. consumption
 D. decline
-我的答案:B
+正确答案:B
 
 Heated vests will protect your core to keep you safe and warm and can easily coordinate with other work clothes or \_\_\_\_\_\_.
 A. uniforms
 B. costumes
 C. robes
 D. gowns
-我的答案:A
+正确答案:A
 
 The scientist's significant \_\_\_\_\_\_ to cancer research earned her a prestigious award and recognition from the global scientific community.
 A. contribution
 B. convention
 C. compensation
 D. deduction
-我的答案:A
+正确答案:A
 
 Employers must carefully consider tax \_\_\_\_\_\_ when calculating employees' take-home pay to comply with legal regulations and standards
 A. foundations
 B. commissions
 C. deductions
 D. transfers
-我的答案:C
+正确答案:C
 
 From a critical perspective we might also ask whose interests are being served by the current state of programming and \_\_\_\_\_\_ in older adult learning activities
 A. support
 B. application
 C. projection
 D. participation
-我的答案:D
+正确答案:D
 
 Although delayed, a comprehensive \_\_\_\_\_\_ is still planned to open at a public park in Beijing.
 A. exhibit
 B. demonstration
 C. explanation
 D. composition
-我的答案:A
+正确答案:A
 
 The research examines various \_\_\_\_\_\_ of climate change, including its impact on agriculture, weather patterns, and sea level
 A. components
 B. concepts
 C. aspects
 D. segments
-我的答案:C
+正确答案:C
 
 Among the 10 banks with the largest increases, criticized loans rose by 62 percent in \_\_\_\_\_\_ in the second quarter.
 A. aggregate
 B. amount
 C. collection
 D. category
-我的答案:A
+正确答案:A
 
 But this standard is easier for borrowers to meet than the requirements to receive a private loan at competitive interest rates, making \_\_\_\_\_\_ available to more students
 A. scheme
 B. insight
 C. credit
 D. hypothesis
-我的答案:C
+正确答案:C
 
 The temperature in the laboratory must be kept \_\_\_\_\_\_ to ensure the accuracy and reliability of the experimental results
 A. concurrent
 B. consistent
 C. conventional
 D. constant
-我的答案:D
+正确答案:D
 
 Indeed, indirect use of funds to \_\_\_\_\_\_ cars was not the intended purpose of merit-aid programs.
 A. acquire
 B. buy
 C. purchase
 D. consume
-我的答案:C
+正确答案:C
 
 The annual academic \_\_\_\_\_\_ brings together scholars from around the world to discuss recent advancements and collaborative opportunities.
 A. exhibition
 B. mediation
 C. circumstance
 D. convention
-我的答案:D
+正确答案:D
 
 'Microplastic' is a term for plastic particles for which no universally established \_\_\_\_\_\_ exists.
 A. definition
 B. inference
 C. belief
 D. denotation
-我的答案:A
+正确答案:A
 
 Each \_\_\_\_\_\_ of the new apartment building has access to a communal garden and recreational facilities.
 A. resident
 B. citizen
 C. region
 D. site
-我的答案:A
+正确答案:A
 
 Students who need extra \_\_\_\_\_\_ with their coursework can visit the tutoring center for personalized help.
 A. feature
 B. consequence 
 C. persistence
 D. assistance
-我的答案:D
+正确答案:D
 
 ARCH model is appropriate to capture the weekly \_\_\_\_\_\_ of the oil price and sectoral stock prices with their corresponding changes.
 A. stability
 B. expansion
 C. evolution
 D. display
-我的答案:C
+正确答案:C
 
 Some illnesses are \_\_\_\_\_\_ to minority ethnic groups.
 A. special
 B. specific
 C. speculated
 D. specified
-我的答案:B
+正确答案:B
 
 The corporate partners pay a subscription \_\_\_\_\_\_ per year to post courses, and students can access all courses for free.
 A. price
 B. fee
 C. welfare
 D. wage
-我的答案:B
+正确答案:B
 
 No precautions have been taken to \_\_\_\_\_\_ the ceilings, which could collapse onto the statues.
 A. stress
 B. enlarge
 C. reinforce
 D. multiply
-我的答案:C
+正确答案:C
 
 The \_\_\_\_\_\_ of the new research center was completed ahead of schedule, thanks to effective project management and skilled labor.
 A. interpretation
 B. commission
 C. distribution
 D. ？
-我的答案:D
+正确答案:D
 
 Resilience, enabled through socio-spatial relationality, is a desired possibility that could only \_\_\_\_\_\_ from the production of spaces of positive development.
 A. emerge
 B. happen
 C. accommodate
 D. exhibit
-我的答案:A
+正确答案:A
 
-By ______ the explosions' infrared light, which penetrates dust better than visible light does, researchers have estimated how often these outbursts occur in the ilky Way.
+By \_\_\_\_\_\_ the explosions' infrared light, which penetrates dust better than visible light does, researchers have estimated how often these outbursts occur in the Milky Way.
 A. focusing
 B. caring
 C. detecting
 D. noticing
-我的答案:C
+正确答案:C
 
-It ______ to its intended phones easily, and it can recharge through certain compatible cases.
+It \_\_\_\_\_\_ to its intended phones easily, and it can recharge through certain compatible cases.
 A. attaches
 B. connects
 C. sticks
 D. selects
 正确答案：未知，排除B
 
-This paper presents the findings from recent archaeological investigations at the ancient ______ of Pompeii.
+This paper presents the findings from recent archaeological investigations at the ancient \_\_\_\_\_\_ of Pompeii.
 A. site
 B. step
 C. relics
 D. access
-我的答案:A
+正确答案:A
 
-The gender pay gap is still enormous, and CEOs are still overwhelmingly male, as are ______ boards.
+The gender pay gap is still enormous, and CEOs are still overwhelmingly male, as are \_\_\_\_\_\_ boards.
 A. school
 B. corporate
 C. business
 D. cooperate
-我的答案:B
+正确答案:B
 
-The theoretical ______ within which the research is conducted must be well-defned to maintain focus and analytical rigor.
+The theoretical \_\_\_\_\_\_ within which the research is conducted must be well-defined to maintain focus and analytical rigor.
 A.framework
 B.thesis
 c.file
 D.document
-我的答案:A
+正确答案:A
 
-The majority of ______ data is for particles with dimensions above 10 or 50 μm.
+The majority of \_\_\_\_\_\_ data is for particles with dimensions above 10 or 50 μm.
 A. possible
 B. available
 C. considerate
 D. practical
-我的答案:B
+正确答案:B
 
-Student ______ in extracurricular activities has been shown to improve academic performance and social skills
+Student \_\_\_\_\_\_ in extracurricular activities has been shown to improve academic performance and social skills
 A. transmission
-B. accommondation
+B. accommodation
 C. intervention
 D. participation
-我的答案:D
+正确答案:D
 
-The objectives of financial support are to return the public sector budget to surplus in the short term and maintain ______ economic growth in the long term.
+The objectives of financial support are to return the public sector budget to surplus in the short term and maintain \_\_\_\_\_\_ economic growth in the long term.
 A. confined
 B. finite
 C. sustainable
 D. random
-我的答案:C
+正确答案:C
 
 This study investigates the factors contributing to \_\_\_\_\_\_ access to health care services in rural areas.
 A. restricted
 B. received
 C. regarded
 D. required
-我的答案:A
+正确答案:A
 
-It was outdoor education, focused mainly on children and young adults, but also including ______ adults, that closely embodied basic tenets of progressive adult environmental education.
+It was outdoor education, focused mainly on children and young adults, but also including \_\_\_\_\_\_ adults, that closely embodied basic tenets of progressive adult environmental education.
 A. mature
 B. sophisticated
 C. social
 D. cultivated
-我的答案:A
+正确答案:A
 
-The study encompasses a wide ______ of topics, from environmental science to human psychology, providing a comprehensive overview.
+The study encompasses a wide \_\_\_\_\_\_ of topics, from environmental science to human psychology, providing a comprehensive overview.
 A.site
 B.range
 C.network
 D.content
-我的答案:B
+正确答案:B
 
-The purpose of this review was to identify the views of people with lD regarding their participation in RSE programmes and how they ______ their effectiveness
+The purpose of this review was to identify the views of people with lD regarding their participation in RSE programmes and how they \_\_\_\_\_\_ their effectiveness
 A.perceive
 B.define
 C.sense
 D.regard
-我的答案:A
+正确答案:A
 
-The successful ______ of new languages can be greatly enhanced byimmersion and consistent practice in authentic settings
+The successful \_\_\_\_\_\_ of new languages can be greatly enhanced byimmersion and consistent practice in authentic settings
 A. acquisition
 B. communication
 C. coordination
 D. accumulation
-我的答案:A
+正确答案:A
 
-The paper has argued four propositions concerning competition ______.
+The paper has argued four propositions concerning competition \_\_\_\_\_\_.
 A.program
 B.politics
 c.policy
 D.process
 正确答案未知，排除D
 
-In most cases, such discussions were ______ to those classrooms where children were socially transitioning and their classmates needed language to make sense
+In most cases, such discussions were \_\_\_\_\_\_ to those classrooms where children were socially transitioning and their classmates needed language to make sense
 A. configurated
 B. confirmed
 C. confided
 D. confined
-我的答案:D
+正确答案:D
 
-Although delayed, a comprehensive ______ is still planned to open at a public park in Beijing.
+Although delayed, a comprehensive \_\_\_\_\_\_ is still planned to open at a public park in Beijing.
 A. exhibit
 B. presentation
 c. composition
 D. demonstration
-我的答案:A
+正确答案:A
 
-The ______ results of the study will be published in the forthcoming journal edition, providing valuable insights into the research topic.
+The \_\_\_\_\_\_ results of the study will be published in the forthcoming journal edition, providing valuable insights into the research topic.
 A. initial
 B. final
 C. crutial
 D. global
-我的答案:B
+正确答案:B
 
-Researchers published their findings in a peer-reviewed ______ to ensure the credibility and dissemination of their work.
+Researchers published their findings in a peer-reviewed \_\_\_\_\_\_ to ensure the credibility and dissemination of their work.
 A. final
 B. rational
 C. journal
 D. liberal
-我的答案:C
+正确答案:C
 
-It is become evident that children are ______ of transmitting the virus to some extent.
+It is become evident that children are \_\_\_\_\_\_ of transmitting the virus to some extent.
 A. skillful
 B. dynamic
 C. alternative
 D. capable
-我的答案:D
+正确答案:D
 
-As labor market conditions deteriorate, urban worker ______ into self-employment because they lack better alternatives
+As labor market conditions deteriorate, urban worker \_\_\_\_\_\_ into self-employment because they lack better alternatives
 A.ferry
 B.keep
 C.transit
 D.denote
+正确答案:C
+
+It is appropriate to address the challenges and complexities that are ______ and deep-rooted to multilingual educational contexts.
+A. salient
+B. principle
+C. inherent
+D. explicit
 我的答案:C
+
+Not only do cultural traditions vary throughout the ______, but economic stability, the international role held, and the establishment of necessary health resources also vary from country to country.
+A. scope
+B. limit
+C. region
+D. range
+我的答案:C
+
+Student ______ in extracurricular activities has been shown to improve academic performance and social skills.
+A. implementation
+B. intervention
+C. transmission
+D. participation
+我的答案:D
+
+Access to certain sensitive information is ______ to authorized personnel to ensure company security.
+A. restricted
+B. required
+C. requested
+D. reclaimed
+我的答案:A
+
+The machine ______ downloads the required information to his or her fax.
+A. automatically
+B. instantly
+C. accordingly
+D. naturally
+我的答案:A
+
+These treatments have been shown to have long-term ______ for patients.
+A. interests
+B. benefits
+C. needs
+D. services
+我的答案:B
+
+The professor's experiment aimed to ______ the theoretical concepts covered in the lecture, providing students with a practical understanding of the material.
+A. compare
+B. demonstrate
+C. coordinate
+D. differentiate
+我的答案:B
+
+To restore privacy and self-determination, there need to much greater limits on the ownership and ______ of personal data by businesses.
+A. exploration
+B. exploitation
+C. consideration
+D. instruction
+我的答案:B
+
+Implicit social cognition is what psychologists describe as the cognitive processes that occur outside of our conscious awareness or control, including all the associated attitudes, stereotypes, and lingering ______.
+A. propositions
+B. preferences
+C. biases
+D. trends
+我的答案:C
+
+Experiments that attempt to ______ acclimatization by exposing people to cold repeatedly have produced mixed and mostly negative results
+A. promoteA
+B. convince
+C. endanger
+D. induce
+我的答案:D
+
+The ______ benefits of early education programs include better academic outcomes and increased social mobility.
+A. adaptive
+B. initial
+C. potential
+D. innovative
+我的答案:C
+
+In the event of an unexpected ______,our emergency protocols will be enacted to ensure everyone's safety
+A. complement
+B. coincidence
+C. circumstance
+D. component
+我的答案:C
+
